@@ -1,18 +1,18 @@
-/*
- * Copyright 2007 The Kuali Foundation
+/**
+ * Copyright 2010 The Kuali Foundation Licensed under the
+ * Educational Community License, Version 2.0 (the "License"); you may
+ * not use this file except in compliance with the License. You may
+ * obtain a copy of the License at
  *
- * Licensed under the Educational Community License, Version 1.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ * http://www.osedu.org/licenses/ECL-2.0
  *
- * http://www.opensource.org/licenses/ecl1.php
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an "AS IS"
+ * BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing
+ * permissions and limitations under the License.
  */
+
 package org.kuali.student.brms.internal.common.statement.propositions;
 
 import java.util.Collection;
@@ -52,12 +52,12 @@ public class SubsetProposition<E> extends AbstractProposition<Integer> {
     		FactResultInfo criteriaDTO, String criteriaColumn, 
     		FactResultInfo factDTO, String factColumn) {
         super(id, propositionName, PropositionType.SUBSET, 
-        		ComparisonOperator.EQUAL_TO, new Integer(criteriaDTO.getResultList().size()),
+        		ComparisonOperator.EQUAL_TO, Integer.valueOf(criteriaDTO.getResultList().size()),
         		criteriaDTO, criteriaColumn, factDTO, factColumn);
 		this.factColumn = factColumn;
 		this.criteriaColumn = criteriaColumn;
 		intersection = new Intersection();
-    	intersection.setCriteria(criteriaDTO, criteriaColumn);
+    	intersection.setCriteria(criteriaDTO, this.criteriaColumn);
     	intersection.setFact(factDTO, factColumn);
     }
 
@@ -69,7 +69,7 @@ public class SubsetProposition<E> extends AbstractProposition<Integer> {
 
         Integer count = Integer.valueOf(met.size());
 
-        result = checkTruthValue(count, super.expectedValue);
+        result = checkTruthValue(count);
 
         this.resultValues = met;
 
