@@ -1,3 +1,18 @@
+/**
+ * Copyright 2010 The Kuali Foundation Licensed under the
+ * Educational Community License, Version 2.0 (the "License"); you may
+ * not use this file except in compliance with the License. You may
+ * obtain a copy of the License at
+ *
+ * http://www.osedu.org/licenses/ECL-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an "AS IS"
+ * BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing
+ * permissions and limitations under the License.
+ */
+
 package org.kuali.student.brms.internal.common.utils;
 
 import java.math.BigDecimal;
@@ -56,7 +71,7 @@ public class SupportedXsdDatatypes {
     		case STRING:
     			return DatatypeConverter.parseString(xsdStringValue);
     		case BOOLEAN:
-    			return new Boolean(DatatypeConverter.parseBoolean(xsdStringValue));
+    			return Boolean.valueOf(DatatypeConverter.parseBoolean(xsdStringValue));
     		case DECIMAL:
     			return DatatypeConverter.parseDecimal(xsdStringValue);
     		case FLOAT:
@@ -66,11 +81,11 @@ public class SupportedXsdDatatypes {
     		case DATETIME:
     			return DatatypeConverter.parseDateTime(xsdStringValue);
     		case INT:
-    			return new Integer(DatatypeConverter.parseInt(xsdStringValue));
+    			return Integer.valueOf(DatatypeConverter.parseInt(xsdStringValue));
     		case INTEGER:
     			return DatatypeConverter.parseInteger(xsdStringValue);
     		case LONG:
-    			return new Long(DatatypeConverter.parseLong(xsdStringValue));
+    			return Long.valueOf(DatatypeConverter.parseLong(xsdStringValue));
     	}
 		throw new AssertionError("Data type conversion error. Unknown XSD datatype: " + xsdDataType);
     }
