@@ -1,3 +1,18 @@
+/**
+ * Copyright 2010 The Kuali Foundation Licensed under the
+ * Educational Community License, Version 2.0 (the "License"); you may
+ * not use this file except in compliance with the License. You may
+ * obtain a copy of the License at
+ *
+ * http://www.osedu.org/licenses/ECL-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an "AS IS"
+ * BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing
+ * permissions and limitations under the License.
+ */
+
 package org.kuali.student.brms.internal.common.statement.propositions;
 
 import org.junit.Assert;
@@ -21,7 +36,7 @@ public class IntersectionPropositionTest {
 
 		IntersectionProposition<String> prop = new IntersectionProposition<String>(
         		"A-1", "A",
-                ComparisonOperator.GREATER_THAN_OR_EQUAL_TO, new Integer(1), 
+                ComparisonOperator.GREATER_THAN_OR_EQUAL_TO, Integer.valueOf(1), 
                 criteria, "resultColumn.cluId", fact, "resultColumn.cluId");
 
         Boolean result = prop.apply();
@@ -43,7 +58,7 @@ public class IntersectionPropositionTest {
 
         IntersectionProposition<String> prop = new IntersectionProposition<String>(
         		"A-1", "A",
-                ComparisonOperator.GREATER_THAN_OR_EQUAL_TO, new Integer(2), 
+                ComparisonOperator.GREATER_THAN_OR_EQUAL_TO, Integer.valueOf(2), 
                 criteria, "resultColumn.cluId", fact, "resultColumn.cluId");
 
         Boolean result = prop.apply();
@@ -65,7 +80,7 @@ public class IntersectionPropositionTest {
 
         IntersectionProposition<String> prop = new IntersectionProposition<String>(
         		"A-1", "A",
-                ComparisonOperator.GREATER_THAN_OR_EQUAL_TO, new Integer(1), 
+                ComparisonOperator.GREATER_THAN_OR_EQUAL_TO, Integer.valueOf(1), 
                 criteria, "resultColumn.cluId", fact, "resultColumn.cluId");
 
         Boolean result = prop.apply();
