@@ -1,3 +1,18 @@
+/**
+ * Copyright 2010 The Kuali Foundation Licensed under the
+ * Educational Community License, Version 2.0 (the "License"); you may
+ * not use this file except in compliance with the License. You may
+ * obtain a copy of the License at
+ *
+ * http://www.osedu.org/licenses/ECL-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an "AS IS"
+ * BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing
+ * permissions and limitations under the License.
+ */
+
 package org.kuali.student.brms.internal.common.statement.propositions.functions;
 
 import java.math.BigDecimal;
@@ -27,7 +42,7 @@ public class MinTest {
 		Min<Integer> min = new Min<Integer>(fact, "resultColumn.credits");
 		Number output1 = min.compute();
 		
-		Assert.assertEquals(new Integer(3), output1);
+		Assert.assertEquals(Integer.valueOf(3), output1);
 	}
 
 	@Test
