@@ -1,18 +1,18 @@
-/*
- * Copyright 2007 The Kuali Foundation
+/**
+ * Copyright 2010 The Kuali Foundation Licensed under the
+ * Educational Community License, Version 2.0 (the "License"); you may
+ * not use this file except in compliance with the License. You may
+ * obtain a copy of the License at
  *
- * Licensed under the Educational Community License, Version 1.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ * http://www.osedu.org/licenses/ECL-2.0
  *
- * http://www.opensource.org/licenses/ecl1.php
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an "AS IS"
+ * BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing
+ * permissions and limitations under the License.
  */
+
 package org.kuali.student.brms.translators.drools;
 
 import static org.junit.Assert.assertEquals;
@@ -294,7 +294,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"cluID-1234",
             			String.class.getName(),
@@ -339,7 +339,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"100.1234567890",
             			BigDecimal.class.getName(),
@@ -389,14 +389,14 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"cluID-1234",
             			String.class.getName(),
             			yieldValueFunction1));
         RuleElementInfo element2 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.GREATER_THAN_OR_EQUAL_TO.toString(),
             			"75.0",
             			BigDecimal.class.getName(),
@@ -464,14 +464,14 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"cluID-1234",
             			String.class.getName(),
             			yieldValueFunction1));
         RuleElementInfo element2 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.GREATER_THAN_OR_EQUAL_TO.toString(),
             			"75.0",
             			BigDecimal.class.getName(),
@@ -515,7 +515,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"75.0",
             			BigDecimal.class.getName(),
@@ -568,7 +568,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"85.0",
             			BigDecimal.class.getName(),
@@ -619,7 +619,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"75.0",
             			BigDecimal.class.getName(),
@@ -661,7 +661,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"85.0",
             			BigDecimal.class.getName(),
@@ -712,7 +712,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"85.0",
             			BigDecimal.class.getName(),
@@ -754,7 +754,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"75.0",
             			BigDecimal.class.getName(),
@@ -810,7 +810,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"1",
             			Integer.class.getName(),
@@ -869,7 +869,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"1",
             			Integer.class.getName(),
@@ -914,7 +914,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"1",
             			Integer.class.getName(),
@@ -973,7 +973,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"1",
             			Integer.class.getName(),
@@ -1015,7 +1015,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"12.0",
             			BigDecimal.class.getName(),
@@ -1066,7 +1066,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"12.0",
             			BigDecimal.class.getName(),
@@ -1108,7 +1108,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"80.0",
             			BigDecimal.class.getName(),
@@ -1159,7 +1159,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"80.0",
             			BigDecimal.class.getName(),
@@ -1196,7 +1196,7 @@ public class RuleSetTranslatorTest {
     	List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"80.0",
             			BigDecimal.class.getName(),
@@ -1260,14 +1260,14 @@ public class RuleSetTranslatorTest {
 		List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"1",
             			Integer.class.getName(),
             			yieldValueFunction1));
         RuleElementInfo element2 = dtoFactory.createRuleElementDTO(
         		"element-2", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"1",
             			Integer.class.getName(),
@@ -1348,14 +1348,14 @@ public class RuleSetTranslatorTest {
 		List<RuleElementInfo> ruleElementList = new ArrayList<RuleElementInfo>();
         RuleElementInfo element1 = dtoFactory.createRuleElementDTO(
         		"element-1", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"1",
             			Integer.class.getName(),
             			yieldValueFunction1));
         RuleElementInfo element2 = dtoFactory.createRuleElementDTO(
         		"element-2", "PROPOSITION", 
-        		new Integer(1), getRuleProposition(
+        		Integer.valueOf(1), getRuleProposition(
             			ComparisonOperator.EQUAL_TO.toString(),
             			"1",
             			Integer.class.getName(),
